Debug & fix build script